<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/gray2"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/lv_chon"
            android:fitsSystemWindows="true"
            android:layout_marginBottom="10dp"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relativelayout"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white">
                    <com.google.android.material.appbar.AppBarLayout
                        android:layout_width="match_parent"
                        android:id="@+id/appbarlayout_main"
                        android:background="@android:color/transparent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.Toolbar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/toolbar_sp"
                            app:titleTextColor="@color/mauchu">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/img_quaylai"
                                    android:layout_width="70px"
                                    android:layout_height="70px"
                                    android:background="@drawable/border_nut"
                                    android:src="@drawable/ic_baseline_keyboard_backspace_24" />

                                <ImageView
                                    android:id="@+id/img_gioHang"
                                    android:layout_width="70px"
                                    android:layout_height="70px"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginHorizontal="20dp"
                                    android:background="@drawable/border_nut"
                                    android:src="@drawable/icongiohang" />
                            </RelativeLayout>
                        </androidx.appcompat.widget.Toolbar>
                    </com.google.android.material.appbar.AppBarLayout>
                    <ImageView
                        android:id="@+id/img_anhHang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_hide_image_24" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/tv_tenSP"
                        android:text="Tên sản phẩm"
                        android:textStyle="bold"
                        android:layout_below="@id/img_anhHang"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        />
                    <RelativeLayout
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_below="@id/tv_tenSP"
                        android:id="@+id/ll"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_gia_goc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="giá"
                            android:textColor="@color/red"
                            android:textSize="18sp" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_height="match_parent">
                            <Button
                                android:layout_width="100px"
                                android:layout_height="wrap_content"
                                android:text="@string/tru"
                                android:textSize="30sp"
                                android:textColor="@color/white"
                                android:background="@color/gray"
                                android:id="@+id/btn_tru"/>
                            <EditText
                                android:background="@drawable/border"
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:text="@string/sl"
                                android:layout_marginHorizontal="5dp"
                                android:gravity="center"
                                android:id="@+id/ed_sl"/>

                            <Button
                                android:layout_width="100px"
                                android:layout_height="wrap_content"
                                android:text="@string/cong"
                                android:textSize="30sp"
                                android:textColor="@color/white"
                                android:background="@color/gray"
                                android:id="@+id/btn_cong"/>
                        </LinearLayout>

                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_below="@id/ll"
                        android:id="@+id/nn"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:text="@string/tacgia"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_tacgia"
                            android:textSize="18sp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/black"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_below="@id/nn"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:text="@string/nhaxb"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_nxb"
                            android:textSize="18sp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/ln_mta"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_below="@id/relativelayout">
                    <TextView
                        android:id="@+id/tv_mota"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="mota"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:id="@+id/tv_xemthem"
                        android:text="@string/xemthem"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:visibility="gone"
                        android:id="@+id/tv_anbot"
                        android:text="@string/anbot"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/ln_mta"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/danh"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/xemAll"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/red"
                            android:gravity="right"
                            android:id="@+id/tv_xemAll"/>

                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_danh_gia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Đánh Giá"
                        android:textColor="@color/blue"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_xem_them"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rec_danh_gia"
                        android:background="@color/red"
                        android:text="@string/xemAll"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lv_chon"
            android:layout_alignParentBottom="true">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/blue"
                android:text="@string/chat"
                android:id="@+id/btn_chat"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/red"
                android:text="@string/them"
                android:id="@+id/btn_them"/>
        </LinearLayout>
    </RelativeLayout>

</layout>