<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.CapNhatTKActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/maunen"
            android:id="@+id/appbarlayout_login">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_login"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
               />
        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="Cập nhật tài khoản "
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="349dp"
            android:layout_height="650dp"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="70dp">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="admin@gmail.com"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/tenDN"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/mkcu"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/ed_email_update"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/mkmoi"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/diachi"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/sdt"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_boder_bgwhite"
                    android:hint="@string/ngaysinh"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sdt"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black">

                    <TextView
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/gioitinh"
                        android:textSize="20dp" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_weight="3">
                        <RadioGroup
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_marginRight="20dp"
                                android:checked="true"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Nam" />

                            <RadioButton
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Nữ" />
                        </RadioGroup>

                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/btnCapNhat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="Cập nhật"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:background="@drawable/border_login"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_update_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:elevation="4dp"
            android:src="@drawable/avatardefault" />
    </RelativeLayout>

</layout>